--- a/css/accueil.css
+++ b/css/accueil.css
@@ -26,11 +26,8 @@ body {
 
 .menu ul {
   width: 80%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
+  float: right;
   align-items: center;
-  justify-content: flex-end;
 }
 
 .menu ul li {
@@ -40,6 +37,12 @@ body {
 
 .menu ul li a {
   text-decoration: none;
+  color: red;
+}
+
+ul li ul li {
+  display: flex;
+  flex-direction: column;
 }
 
 /*# sourceMappingURL=accueil.css.map */
