--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -6,5 +6,5 @@ $colorD:#000000;
 $colorV:#369D53;
 $colorW: #FFFFFF;
 $colorY:#038DFE;
-$fontP:font-family 'Nunito', sans-serif;
-$fontT:font-family 'Poppins', sans-serif;
+$fontP: 'Nunito', sans-serif;
+$fontT: 'Poppins', sans-serif;
