--- a/css/accueil.css
+++ b/css/accueil.css
@@ -130,4 +130,32 @@ ul li ul li {
   border: 4px solid #698474;
 }
 
+.partenaires {
+  background-color: #698474;
+  padding: 40px 0px;
+}
+
+.partenaires__title {
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  color: #FFFFFF;
+  font-size: 40px;
+  margin-bottom: 40px;
+}
+
+.partenaires__wrapper {
+  width: 80%;
+  display: grid;
+  grid-template-columns: 20% 20% 20% 20% 20%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 40px;
+}
+
+.partenaires__wrapper--part {
+  margin-left: auto;
+  margin-right: auto;
+  width: 80px;
+}
+
 /*# sourceMappingURL=accueil.css.map */
