Copyright version DESKTOP

--- a/css/accueil.css
+++ b/css/accueil.css
@@ -349,4 +349,18 @@ footer {
   font-weight: bold;
 }
 
+.copyright {
+  background-color: #D0DDD5;
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  font-size: 14px;
+  padding-top: 1px;
+  padding-bottom: 1px;
+}
+
+.copyright span {
+  color: #038DFE;
+  font-weight: bolder;
+}
+
 /*# sourceMappingURL=accueil.css.map */
