--- a/css/accueil.css
+++ b/css/accueil.css
@@ -9,147 +9,40 @@ body {
   padding: 0;
 }
 
-nav {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  min-height: 8vh;
+.headerHero {
+  width: 100%;
   margin-top: 2%;
 }
 
-.navMenu {
-  width: 60%;
+.menu {
+  width: 90%;
+  margin: 0 auto;
   display: flex;
-  justify-content: space-evenly;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.navMenu li {
+.menu ul {
+  width: 80%;
+  float: right;
+  align-items: center;
+}
+
+.menu ul li {
   list-style: none;
+  margin-right: 5%;
 }
 
-.navMenu li a {
+.menu ul li a {
   text-decoration: none;
-  letter-spacing: 1px;
-  font-weight: bold;
-  font-size: 16px;
-  font-family: 'poppins';
-  color: black;
+  color: red;
 }
 
-.navMenu li a:hover {
-  color: green;
-}
-
-nav ul #act {
-  position: relative;
-}
-
-nav ul #act ul {
-  display: none;
-  position: absolute;
-  width: 200%;
-}
-
-nav ul #act ul li {
-  padding-top: 10%;
-  margin-left: -20%;
-}
-
-.burger {
-  display: none;
-  cursor: pointer;
-}
-
-.burger div {
-  width: 40px;
-  height: 4px;
-  background-color: black;
-  margin: 7px;
-  transition: all 0.3s ease;
-}
-
-nav ul #act:hover ul {
-  display: block;
-}
-
-ul li .active {
-  color: #678372;
-}
-
-@media screen and (max-width: 1300px) {
-  .navMenu {
-    width: 70%;
-  }
-  .navMenu li a {
-    font-size: 14px;
-  }
-  nav .logo__logo {
-    width: 90%;
-  }
-}
-
-@media screen and (max-width: 875px) {
-  body {
-    overflow-x: hidden;
-  }
-  .navMenu {
-    position: absolute;
-    right: 0;
-    height: 80vh;
-    top: 10vh;
-    background-color: rgba(103, 131, 114, 0.3);
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 55%;
-    transform: translateX(100%);
-    transition: transform 0.5s ease-in;
-  }
-  .navMenu li {
-    opacity: 0;
-  }
-  .navMenu li a:hover {
-    color: #4E6A68;
-  }
-  .burger {
-    display: block;
-  }
-  .nav-active {
-    transform: translateX(0);
-  }
-  nav ul #act:hover ul {
-    top: 0;
-    margin-left: 80%;
-  }
-  nav ul #act:hover ul li {
-    padding-left: 20%;
-  }
-  nav .logo__logo {
-    width: 80%;
-  }
-}
-
-@keyframes navLinkFade {
-  from {
-    opacity: 0;
-    transform: translateX(50px);
-  }
-  to {
-    opacity: 1;
-    transform: translateX(0px);
-  }
-}
-
-.toggle .burger__line1 {
-  transform: rotate(-45deg) translate(-5px, 10px);
-}
-
-.toggle .burger__line2 {
-  opacity: 0;
-}
-
-.toggle .burger__line3 {
-  transform: rotate(45deg) translate(-5px, -10px);
+ul li ul li {
+  display: flex;
+  flex-direction: column;
 }
 
 .rejoignezNous__img {
