Newsletter version Desktop

--- a/css/Newsletter.css
+++ b/css/Newsletter.css
@@ -1,2 +1,52 @@
+.newsletterTop {
+  background-color: #BAC7A7;
+  height: 100px;
+}
+
+.newsletter {
+  margin-top: -40px;
+  height: 370px;
+  background-color: #BAC7A7;
+  background-image: url(/Assets/bg__newsletter.png);
+  background-size: 100%;
+}
+
+.newsletter__title {
+  text-align: center;
+  color: #FFFFFF;
+  font-family: "Poppins", sans-serif;
+  font-size: 32px;
+  font-weight: bolder;
+}
+
+.newsletter__wrapper {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 100%;
+  width: 30%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 64px;
+}
+
+.newsletter__wrapper--input {
+  padding: 24px 40px;
+  border-radius: 80px;
+  border: none;
+  width: 180%;
+  font-family: "Poppins", sans-serif;
+}
+
+.newsletter__wrapper--abonner {
+  background-color: #698474;
+  border: none;
+  color: #FFFFFF;
+  font-family: "Poppins", sans-serif;
+  padding: 24px 40px;
+  border-radius: 80px;
+  width: 80%;
+  margin-left: 80px;
+  cursor: pointer;
+}
 
 /*# sourceMappingURL=Newsletter.css.map */
