--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -8,3 +8,9 @@ $colorW: #FFFFFF;
 $colorY:#038DFE;
 $fontP: 'Nunito', sans-serif;
 $fontT: 'Poppins', sans-serif;
+$sizeT:40px; 
+$sizeST:32px;
+$maxwidth:1200px;
+$phone:575px;
+$tablette:768px;
+$desktop:1200px;
