Section top.contact page DESKTOP

--- a/css/contact.css
+++ b/css/contact.css
@@ -1,2 +1,137 @@
+.contact {
+  font-family: "Nunito", sans-serif;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.contact__title {
+  font-family: "Poppins", sans-serif;
+  font-size: 40px;
+  text-transform: uppercase;
+  color: #698474;
+  opacity: .5;
+}
+
+.contact__subtitle {
+  font-size: 32px;
+  font-family: "Poppins", sans-serif;
+  color: #698474;
+}
+
+.contact__wrapper {
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  grid-template-rows: 100%;
+  margin-top: 80px;
+}
+
+.wrapper__tel {
+  grid-area: 1/1;
+}
+
+.wrapper__tel--title {
+  font-size: 16px;
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+}
+
+.wrapper__tel--icon {
+  width: 80px;
+  height: 80px;
+  margin-bottom: 8px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+.wrapper__tel--para {
+  text-align: center;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+  line-height: 1.6em;
+  font-weight: 300;
+}
+
+.wrapper__tel--num {
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  color: #698474;
+  font-weight: 700;
+}
+
+.wrapper__email {
+  grid-area: 1/2;
+}
+
+.wrapper__email--title {
+  font-size: 16px;
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+}
+
+.wrapper__email--icon {
+  width: 80px;
+  height: 80px;
+  margin-bottom: 8px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+.wrapper__email--para {
+  text-align: center;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+  line-height: 1.6em;
+  font-weight: 300;
+}
+
+.wrapper__email--ema {
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  color: #698474;
+  font-weight: 700;
+}
+
+.wrapper__local {
+  grid-area: 1/3;
+}
+
+.wrapper__local--title {
+  font-size: 16px;
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+}
+
+.wrapper__local--icon {
+  width: 80px;
+  height: 80px;
+  margin-bottom: 8px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+.wrapper__local--para {
+  text-align: center;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+  line-height: 1.6em;
+  font-weight: 300;
+}
+
+.wrapper__local--dest {
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  color: #698474;
+  font-weight: 700;
+}
 
 /*# sourceMappingURL=contact.css.map */
