--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -24,7 +24,6 @@
     }
 }
 
-
 .wrapper{
     &__tel{
         grid-area: 1/1;
@@ -118,6 +117,34 @@
             text-decoration: none;
             color: $colorP; 
             font-weight: 700;
+        }
+    }
+}
+
+@media only screen and (max-width: $phone){
+    .contact{
+        padding-left: 15px;
+        padding-right: 15px;
+        text-align:  center;
+        &__subtitle{
+            font-size: 16px;
+        }
+        &__wrapper{
+            display: grid;
+            grid-template-rows: 33% 33% 33%;
+            grid-template-columns: 100%;
+        }
+    }
+    .wrapper{
+        &__tel{
+            grid-area: 1/1;
+            padding-bottom: 240px;
+        }
+        &__email{
+            grid-area: 2/1;
+        }
+        &__local{
+            grid-area: 3/1;
         }
     }
 }
