--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -1,22 +1,24 @@
-@import'variables';
-.contact{
+@import 'variables';
+
+// version DESKTOP //
+.contact {
     font-family: $fontP;
     max-width: $maxwidth;
     margin-left: auto;
     margin-right: auto;
-    &__title{
+    &__title {
         font-family: $fontT;
         font-size: $sizeT;
         text-transform: uppercase;
         color: $colorP;
-        opacity: .5;
+        opacity: 0.5;
     }
-    &__subtitle{
+    &__subtitle {
         font-size: $sizeST;
         font-family: $fontT;
         color: $colorP;
     }
-    &__wrapper{
+    &__wrapper {
         display: grid;
         grid-template-columns: 33% 33% 33%;
         grid-template-rows: 100%;
@@ -24,15 +26,15 @@
     }
 }
 
-.wrapper{
-    &__tel{
+.wrapper {
+    &__tel {
         grid-area: 1/1;
-        &--title{
+        &--title {
             font-size: 16px;
             text-align: center;
             font-family: $fontT;
         }
-        &--icon{
+        &--icon {
             width: 80px;
             height: 80px;
             margin-bottom: 8px;
@@ -40,7 +42,7 @@
             margin-right: auto;
             display: block;
         }
-        &--para{
+        &--para {
             text-align: center;
             width: 70%;
             margin-left: auto;
@@ -48,23 +50,23 @@
             line-height: 1.6em;
             font-weight: 300;
         }
-        &--num{
+        &--num {
             display: block;
             text-align: center;
             text-decoration: none;
-            color: $colorP;  
+            color: $colorP;
             font-weight: 700;
-  
+
         }
     }
-    &__email{
+    &__email {
         grid-area: 1/2;
-        &--title{
+        &--title {
             font-size: 16px;
             text-align: center;
             font-family: $fontT;
         }
-        &--icon{
+        &--icon {
             width: 80px;
             height: 80px;
             margin-bottom: 8px;
@@ -72,7 +74,7 @@
             margin-right: auto;
             display: block;
         }
-        &--para{
+        &--para {
             text-align: center;
             width: 70%;
             margin-left: auto;
@@ -80,22 +82,22 @@
             line-height: 1.6em;
             font-weight: 300;
         }
-        &--ema{
+        &--ema {
             display: block;
             text-align: center;
             text-decoration: none;
-            color: $colorP; 
+            color: $colorP;
             font-weight: 700;
         }
     }
-    &__local{
+    &__local {
         grid-area: 1/3;
-        &--title{
+        &--title {
             font-size: 16px;
             text-align: center;
             font-family: $fontT;
         }
-        &--icon{
+        &--icon {
             width: 80px;
             height: 80px;
             margin-bottom: 8px;
@@ -103,7 +105,7 @@
             margin-right: auto;
             display: block;
         }
-        &--para{
+        &--para {
             text-align: center;
             width: 70%;
             margin-left: auto;
@@ -111,40 +113,69 @@
             line-height: 1.6em;
             font-weight: 300;
         }
-        &--dest{
+        &--dest {
             display: block;
             text-align: center;
             text-decoration: none;
-            color: $colorP; 
+            color: $colorP;
             font-weight: 700;
         }
     }
 }
+// }
+// version DESKTOP FIN //
 
-@media only screen and (max-width: $phone){
-    .contact{
+// version MOBILE //
+@media only screen and (max-width: $phone) {
+    .contact {
         padding-left: 15px;
         padding-right: 15px;
-        text-align:  center;
-        &__subtitle{
+        text-align: center;
+        &__subtitle {
             font-size: 16px;
         }
-        &__wrapper{
+        &__wrapper {
             display: grid;
             grid-template-rows: 33% 33% 33%;
             grid-template-columns: 100%;
         }
     }
-    .wrapper{
-        &__tel{
+    .wrapper {
+        &__tel {
             grid-area: 1/1;
             padding-bottom: 240px;
         }
-        &__email{
+        &__email {
             grid-area: 2/1;
         }
-        &__local{
+        &__local {
             grid-area: 3/1;
         }
     }
 }
+
+// version MOBILE FIN //
+
+// version TABLETTE //
+
+@media only screen and (max-width: $tablette) {
+    .wrapper {
+        &__tel {
+            &--para {
+                width: 90%;
+            }
+        }
+        &__email{
+            &--para{
+                width: 90%;
+            }
+        }
+        &__local{
+            &--para{
+                width: 90%;
+            }
+        }
+    }
+}
+
+// version TABLETTE FIN //
