Découpage section form page contact

--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -123,7 +123,7 @@
     }
 }
 // }
-// version DESKTOP FIN //
+// version DESKTOP END //
 
 // version MOBILE //
 @media only screen and (max-width: $phone) {
@@ -154,7 +154,7 @@
     }
 }
 
-// version MOBILE FIN //
+// version MOBILE END //
 
 // version TABLETTE //
 
