--- a/css/contact.css
+++ b/css/contact.css
@@ -134,6 +134,76 @@
   font-weight: 700;
 }
 
+.contact__container {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 100%;
+  margin: 80px 0px;
+}
+
+.contact__label {
+  display: block;
+}
+
+.contact__form {
+  border: 1px solid;
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
+form {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 25% 25% 25% 25%;
+}
+
+.form__label1 {
+  grid-area: 1/1;
+  padding-bottom: 80px;
+}
+
+.form__label1 label {
+  display: block;
+}
+
+.form__label2 {
+  grid-area: 1/2;
+}
+
+.form__label2 label {
+  display: block;
+}
+
+.form__label3 {
+  grid-column: 1/3;
+  padding-bottom: 40px;
+}
+
+.form__label3 label {
+  display: block;
+}
+
+.form__label4 {
+  grid-column: 1/3;
+  padding-bottom: 80px;
+}
+
+.form__label4 label {
+  display: block;
+}
+
+.form__btnSend {
+  grid-column: 4/1;
+}
+
+.bgImg img {
+  width: 70%;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
 @media only screen and (max-width: 575px) {
   .contact {
     padding-left: 15px;
