--- a/css/contact.css
+++ b/css/contact.css
@@ -21,7 +21,7 @@
 
 .contact__wrapper {
   display: grid;
-  grid-template-columns: 33% 33% 33%;
+  grid-template-columns: 33% 34% 33%;
   grid-template-rows: 100%;
   margin-top: 80px;
 }
@@ -149,6 +149,17 @@
   border: 1px solid;
   padding-left: 24px;
   padding-right: 24px;
+  border-radius: 8px;
+}
+
+.contact__form--title {
+  font-size: 24px;
+  font-family: "Poppins", sans-serif;
+  color: #698474;
+}
+
+.text-danger {
+  color: red;
 }
 
 form {
@@ -159,11 +170,25 @@ form {
 
 .form__label1 {
   grid-area: 1/1;
-  padding-bottom: 80px;
 }
 
 .form__label1 label {
+  font-weight: 700;
   display: block;
+}
+
+.form__label1 img {
+  position: absolute;
+  margin-top: 28px;
+  margin-left: 11px;
+}
+
+.form__label1 input {
+  font-family: "Nunito", sans-serif;
+  margin-top: 20px;
+  padding-left: 40px;
+  height: 42px;
+  width: 90%;
 }
 
 .form__label2 {
@@ -171,36 +196,93 @@ form {
 }
 
 .form__label2 label {
+  font-weight: 700;
   display: block;
+}
+
+.form__label2 img {
+  margin-top: 32px;
+  margin-left: 11px;
+  position: absolute;
+}
+
+.form__label2 input {
+  font-family: "Nunito", sans-serif;
+  padding-left: 40px;
+  height: 42px;
+  margin-top: 18px;
+  width: 100%;
 }
 
 .form__label3 {
+  margin-top: 20px;
   grid-column: 1/3;
-  padding-bottom: 40px;
 }
 
 .form__label3 label {
+  font-weight: 700;
   display: block;
+}
+
+.form__label3 input {
+  padding-left: 40px;
+  margin-top: 20px;
+  width: 100%;
+  height: 42px;
+}
+
+.form__label3 img {
+  margin-top: 28px;
+  margin-left: 11px;
+  position: absolute;
 }
 
 .form__label4 {
+  margin-top: 40px;
   grid-column: 1/3;
-  padding-bottom: 80px;
 }
 
 .form__label4 label {
+  font-weight: 700;
   display: block;
 }
 
+.form__label4 textarea {
+  padding-top: 12px;
+  padding-left: 40px;
+  padding-right: 24px;
+  margin-top: 20px;
+  width: 100%;
+  height: 120px;
+}
+
+.form__label4 img {
+  margin-top: 28px;
+  margin-left: 11px;
+  position: absolute;
+}
+
 .form__btnSend {
-  grid-column: 4/1;
+  margin-top: 24px;
+  margin-bottom: 32px;
+  width: 100%;
+  border: none;
+  padding: 16px;
+  background-color: #698474;
+  color: #FFFFFF;
+  font-weight: bold;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.bgImg {
+  margin: auto;
 }
 
 .bgImg img {
-  width: 70%;
+  width: 90%;
   height: auto;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
   display: block;
 }
 
