--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -20,7 +20,7 @@
     }
     &__wrapper {
         display: grid;
-        grid-template-columns: 33% 33% 33%;
+        grid-template-columns: 33% 34% 33%;
         grid-template-rows: 100%;
         margin-top: 80px;
     }
@@ -138,9 +138,18 @@
         border: 1px solid;
         padding-left: 24px;
         padding-right: 24px;
+        border-radius: 8px;
+        &--title{
+            font-size: 24px;
+            font-family: $fontT;
+            color: $colorP;
+        }
     }
 }
 
+.text-danger{
+    color: red;
+    }
 
 form{
     display: grid;
@@ -151,48 +160,110 @@ form{
 .form{
     &__label1{
         grid-area: 1/1;
-        padding-bottom: 80px;
         label{
+            font-weight: 700;
             display: block;
+        }
+        img{
+            position: absolute;
+            margin-top: 28px;
+            margin-left: 11px;
+        }
+        input{
+            font-family: $fontP;
+            margin-top: 20px;
+            padding-left: 40px;
+            height: 42px;
+            width: 90%;
         }
     }
     &__label2{
         grid-area: 1/2;
         label{
+            font-weight: 700;
             display: block;
         }
+        img{
+            margin-top: 32px;
+            margin-left: 11px;
+            position: absolute
+        }
+        input{
+            font-family: $fontP;
+            padding-left: 40px;
+            height: 42px;
+            margin-top: 18px;
+            width: 100%;
+
+        }
+
     }
     &__label3{
+        margin-top: 20px;
         grid-column: 1/3;
-        padding-bottom: 40px;
         label{
+            font-weight: 700;
             display: block;
+        }
+        input{
+            padding-left: 40px;
+            margin-top: 20px;
+            width: 100%;
+            height: 42px;
+        }
+        img{
+            margin-top: 28px;
+            margin-left: 11px;
+            position: absolute;
         }
     }
     &__label4{
+        margin-top: 40px;
         grid-column: 1/3;
-        padding-bottom: 80px;
         label{
+            font-weight: 700;
             display: block;
+        }
+        textarea{
+            padding-top: 12px;
+            padding-left: 40px;
+            padding-right: 24px;
+            margin-top: 20px;
+            width: 100%;
+            height: 120px;   
+        }
+        img{
+            margin-top: 28px;
+            margin-left: 11px;
+            position: absolute;
         }
     }
     &__btnSend{
-        grid-column: 4/1;
+    margin-top: 24px;
+    margin-bottom: 32px;
+    width: 100%;
+    border: none;
+    padding: 16px;
+    background-color:$colorP;
+    color: $colorW;
+    font-weight: bold;
+    font-size: 16px;
+    cursor: pointer;
     }
 }
 
 
 
-
-
-.bgImg img{
-    width: 70%;
-    height: auto;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
+.bgImg{
+    margin: auto;
+    img{
+        width: 90%;
+        height: auto;
+        margin: auto;
+        display: block;
+    }
 }
-// }
+
 // version DESKTOP END //
 
 // version MOBILE //
