--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -35,7 +35,6 @@
             font-family: $fontT;
         }
         &--icon {
-            width: 80px;
             height: 80px;
             margin-bottom: 8px;
             margin-left: auto;
@@ -67,7 +66,6 @@
             font-family: $fontT;
         }
         &--icon {
-            width: 80px;
             height: 80px;
             margin-bottom: 8px;
             margin-left: auto;
@@ -98,7 +96,6 @@
             font-family: $fontT;
         }
         &--icon {
-            width: 80px;
             height: 80px;
             margin-bottom: 8px;
             margin-left: auto;
@@ -246,12 +243,12 @@ form{
     padding: 16px;
     background-color:$colorP;
     color: $colorW;
-    font-weight: bold;
+    font-weight: 600;
     font-size: 16px;
+    font-family: $fontT;
     cursor: pointer;
     }
 }
-
 
 
 .bgImg{
@@ -284,16 +281,85 @@ form{
     .wrapper {
         &__tel {
             grid-area: 1/1;
-            padding-bottom: 240px;
+            padding-bottom: 120px;
+            margin: auto;
         }
         &__email {
+            margin: auto;
             grid-area: 2/1;
+            padding-bottom: 120px;
         }
         &__local {
+            margin: auto;
             grid-area: 3/1;
         }
     }
+    
+.contact{
+    &__container{
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 32% 68%;
+        margin: 80px 0px;
+    }
+    &__form{
+        grid-area: 2/1;
+        height: max-content;
+    }
 }
+
+.form{
+    &__label1{
+        margin-top: 20px;
+        display: block;
+        grid-area: 1/1;
+        grid-column: 1/3;
+        text-align: left;
+        input{
+            width: 100%;
+        }
+    }
+    &__label2{
+        margin-top: 20px;
+        display: block;
+        grid-area: 2/1;
+        grid-column: 1/3;
+        text-align: left;
+        input{
+            width: 100%;
+        }
+    }
+    &__label3{
+        margin-top: 20px;
+        display: block;
+        grid-area: 3/1;
+        grid-column: 1/3;
+        text-align: left;
+        input{
+            width: 100%;
+        }
+    }
+    &__label4{
+        margin-top: 20px;
+        margin-bottom: 80px;
+        display: block;
+        grid-area: 4/1;
+        grid-column: 1/3;
+        text-align: left;
+    }
+    &__btnSend{
+        margin-top: 80px;
+    }
+}
+
+.bgImg{
+    margin: 0px;
+    img{
+        width: 80%;
+    }
+}
+}
+
 
 // version MOBILE END //
 
