Ajouter des couleurs
 Ajouter des couleurs de la page à propos nous  sur le fichier variables

--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -6,6 +6,9 @@ $colorD:#000000;
 $colorV:#369D53;
 $colorW: #FFFFFF;
 $colorY:#038DFE;
+$colorGC:#4E6A68;
+$colorG44:#707070;
+$colorDE:#678372;
 $fontP: 'Nunito', sans-serif;
 $fontT: 'Poppins', sans-serif;
 $sizeT:40px; 
