--- a/scss/propos.scss
+++ b/scss/propos.scss
@@ -390,3 +390,249 @@ body{
 
 
 
+           //:::::::::::::: version Tablette::::::::::::::::://
+
+
+           @media only screen and (max-width: $tablette) {
+            .No-mission{
+                &__container{
+                   display: grid;
+                   grid-template-columns: 95%;
+                   grid-template-rows: 10% 1fr 1fr;
+                   justify-content: center;
+                &--title{
+                    grid-row: 1;
+                    justify-content: center;
+                    &::before{
+                        content: "";
+                        flex: 20% 0;
+                        border-bottom: 8px solid $colorGC;
+                        margin-right: 10px;
+                        margin-top: 24px;
+                        margin-bottom: auto;
+                    }
+                 
+        
+                }
+               &--description{
+                grid-column: 1;
+                    grid-row: 3;
+                   p{
+                      text-align: center;
+                      text-align: justify;
+                      text-align-last: center;
+                      display: block;
+                      margin-left: auto;
+                      margin-right: auto;
+                      margin-top: 41px;
+                  
+                    }
+               }
+             
+               &--vid{
+                  grid-column: 1;
+                  grid-row: 2;
+                  margin-top: 6px;
+               }
+            }
+         }
+        
+        
+        .Team{
+            background-color: $colorA;
+            padding: 20px;
+            &__title{
+                justify-content: center;
+              
+            }
+            &__container{
+                display: grid;
+                grid-template-columns: repeat(2,50%);
+                grid-template-rows: repeat(3,1fr);
+                justify-content: center;
+                padding: 20px;
+          
+                &--member-1{
+                    grid-row: 1;
+                    grid-column: 1;
+                    margin-top: 10%;
+                    width: 90%;
+                    img{
+                        top: -125px;
+                        left: 43px;
+                        width: 72%;
+                    }
+                    p{
+                        bottom: -120px;
+                        font-size: 22px;
+                    }
+        
+                    div{
+                        bottom: -131px;
+                    }
+                }
+                &--member-2{
+                    grid-row: 1;
+                    grid-column: 2;
+                    margin-top: 10%;
+                    width: 90%;
+        
+                    img{
+                        top: -125px;
+                        left: 43px;
+                        width: 72%;
+        
+                    }
+                    p{
+                        bottom: -120px;
+                        font-size: 22px;
+                    }
+        
+                    div{
+                        bottom: -131px;
+                    }
+                }
+                &--member-3{
+                    grid-row: 2;
+                    grid-column: 1;
+                    margin-top: 25%;
+                    width: 90%;
+                    img{
+                        top: -125px;
+                        left: 43px;
+                        width: 72%;
+                    }
+                    p{
+                        bottom: -120px;
+                        font-size: 22px;
+                    }
+        
+                    div{
+                        bottom: -131px;
+                    }
+                }
+                &--member-4{
+                    grid-row: 2;
+                    grid-column: 2;
+                    margin-top: 25%;
+                    width: 90%;
+                    img{
+                        top: -125px;
+                        left: 43px;
+                        width: 72%;
+                    }
+                    p{
+                        bottom: -120px;
+                        font-size: 22px;
+                    }
+        
+                    div{
+                        bottom: -131px;
+                    }
+                }
+                &--member-5{
+                    grid-row: 3;
+                    grid-column: 1;
+                    margin-top: 35%;
+                    width: 90%;
+                    img{
+                        top: -125px;
+                        left: 43px;
+                        width: 72%;
+                    }
+                    p{
+                        bottom: -120px;
+                        font-size: 22px;
+                    }
+        
+                    div{
+                        bottom: -131px;
+                    }
+                }
+                &--member-6{
+                    grid-row: 3;
+                    grid-column: 2;
+                    margin-top: 35%;
+                    width: 90%;
+        
+                    img{
+                        top: -125px;
+                        left: 43px;
+                        width: 72%;
+                    }
+                    p{
+                        bottom: -120px;
+                        font-size: 22px;
+                    }
+        
+                    div{
+                        bottom: -131px;
+                    }
+                }
+            }
+        }
+        
+        
+        
+        //::::::::::SECTION DEVENIR UN MEMBRE TABLETTE:::::::::::/
+        
+        .Dev-membre{
+            padding: 30px;
+            &__wrapper{
+                display: grid;
+                grid-template-columns: 95%;
+                grid-template-rows: 10% 1fr 1fr 10%;
+                justify-content: center;
+                &--title{
+                    grid-row: 1;
+                    text-align-last: center;
+                    width: 100%;
+                    justify-content: center;
+                    &::before{
+                        content: "";
+                        flex: 14% 0;
+                        border-bottom: 6px solid #698474;
+                        margin-top: 23px;
+                        margin-bottom: auto;
+                        margin-right: 22px;
+                    }
+                }
+                &--para{
+                    grid-row: 3;
+                    margin: auto;
+                    text-align: justify;
+                    text-align-last: center;
+                    margin-top: 42px;
+                    margin-bottom: 0;
+                }
+                &--img{
+                    grid-row: 2;
+                    grid-column: 1;
+                    width: 92%;
+                    height: 350px;
+                    display: block;
+                    margin-left: auto;
+                    margin-right: auto;
+                    margin-top: 10%;
+                }
+               
+                &--btn{
+                    grid-row: 4;
+                    width: 250px;
+                    height: 50px;
+                    margin-left: auto;
+                    margin-right: auto;
+                    margin-top: -3%;
+        
+                    a{
+                       font-size: 20px;
+                    }
+                }
+            }
+        
+        }
+        }
+        
+        
+
+
